# Hyperliquid

./: .gitignore  README.md
hl_engine/: CLAUDE.md  Dockerfile  build_historical_catalog.py  compact_catalog.py  docker-compose.yml  export_freqtrade_ohlcv.py  hl-orchestrator.service  live-trader.service  pyproject.toml  record_live_data.py  record_live_ts.py  recorder.service  ts-recorder.service
hl_engine/grafana/: prometheus_scrape.yml
hl_engine/grafana/dashboards/: hl_engine.json
hl_engine/hl_engine/: .env.example  monitor.py  pyproject.toml  run_backtest.py  run_live.py  run_strategy.py
hl_engine/hl_engine/cli/: hl_cli.py
hl_engine/hl_engine/config/: __init__.py  apex_climax_config.py  apex_config.py  ma_config.py  trend_follow_config.py  v_climax_reversal_config.py
hl_engine/hl_engine/data/: __init__.py  historical_loader.py  live_recorder.py  market_context.py  timescale_sink.py  types.py
hl_engine/hl_engine/execution/: order_router.py  slippage_model.py
hl_engine/hl_engine/features/: __init__.py  market_context_features.py  orderbook_features.py  volatility_features.py
hl_engine/hl_engine/models/: bayesian_model.py  cascade_model.py  funding_model.py  regime_detector.py
hl_engine/hl_engine/orchestrator/: app.py  data_feed.py  docker_manager.py  fill_dispatcher.py  global_risk.py  main.py  metrics.py  order_gateway.py  paper_execution.py  persistence.py  rate_limiter.py  strategy_registry.py
hl_engine/hl_engine/risk/: __init__.py  (+1 more)
hl_engine/strategies/: apex-btc.yml  apex_btc.yml  ma-cross-btc.yml  trend-follow-btc.yml  vclimax-btc.yml
hl_engine/tests/: test_apex_climax_strategy.py  test_export_freqtrade_ohlcv.py  test_freqtrade_context_data.py  test_historical_loader.py  test_ma_strategy.py  test_ma_strategy_position_sync.py  test_market_context.py  test_orchestrator_paper_execution.py  test_run_backtest.py  test_strategy_registry_vclimax.py  test_trend_follow_strategy.py  test_zmq_bar_intervals.py  test_zmq_execution_client_registration.py
(+137 files in other folders)
