[project]
name = "hl-engine"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "nautilus-trader==1.224.0",
    "hyperliquid-python-sdk==0.3.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "pandas>=2.1.0",
    "msgspec>=0.18.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "asyncpg>=0.29.0",
    "rich>=13.0.0",
    # Multi-strategy platform
    "pyzmq>=25.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "docker>=7.0.0",
    "pyyaml>=6.0.1",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "aiosqlite>=0.20.0",
    "prometheus-client>=0.20.0",
    "textual>=0.80",
]

[project.scripts]
hl = "hl_engine.cli.hl_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hl_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv]
# Pin the index so Docker layer cache stays valid even after upstream index changes
index-url = "https://pypi.org/simple"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.15",
]
